//
//  AccessibilityIdentifier.swift
//  Falling
//
//  Created by SeungMin on 2023/08/21.
//

struct AccessibilityIdentifier {
  
  // SignUpVC
  static let phoneBtn = "phoneBtn"
  static let kakoBtn = "kakoBtn"
  static let naverBtn = "naverBtn"
  static let googleBtn = "googleBtn"
  
  // PhoneCertificationVC
  static let phoneNumberTextField = "phoneNumberTextField"
  static let verifyBtn = "verifyBtn"
}
